# Specta-League

./: CMakeLists.txt  README.md  main.cpp  tastatura.txt
include/: combatobserver.h  combatsystem.h  enemy.h  enemyfactory.h  exceptions.h  game.h  hero.h  heropool.h  inventory.h  item.h  party.h  strategy.h
scripts/: run_cppcheck.sh
src/: enemy.cpp  enemyfactory.cpp  hero.cpp  strategy.cpp
